--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Cyberpunk</string>
     <string name="acces_permission">Allow access or turn on GPS</string>
     <string name="all">General</string>
     <string name="all_desc_1">1. The forecast is provided by OpenWeatherMap service.</string>
@@ -26,19 +25,19 @@
     <string name="error_get_data">Error receiving data</string>
     <string name="error_widget_create">Error creating widget</string>
     <string name="forecast">Forecast</string>
-    <string name="fragment_city_data_generator_btn_start">Create</string>
+    <string name="create">Create</string>
     <string name="fragment_city_data_generator_spn_city">choose from the list</string>
     <string name="fragment_city_data_generator_spn_country">determine location</string>
     <string name="fragment_city_data_generator_tv_country_name">need to choose</string>
     <string name="fragment_city_data_generator_tv_head">Widget creation</string>
-    <string name="fragment_city_list_tv">City</string>
+    <string name="city_2">City</string>
     <string name="fragment_country_list_tv">A country</string>
     <string name="fragment_country_list_tv_code">The code</string>
     <string name="greate_widget_in_app">Create a widget in the app</string>
     <string name="have">Available -</string>
     <string name="help_pls">Help</string>
     <string name="humidity">Humidity</string>
-    <string name="internet_is_off">Internet off</string>
+    <string name="internet_is_off">Internet is off</string>
     <string name="load_cities_for">Loading cities for -</string>
     <string name="mail">Personal mail</string>
     <string name="message">Developer Relations</string>
@@ -57,8 +56,8 @@
     <string name="search">Search…</string>
     <string name="search_working">The seach\'s already started, please wait..</string>
     <string name="snow">Snow</string>
-    <string name="tab_text_1">Widget</string>
-    <string name="tab_text_2">Create</string>
+    <string name="widget">Widget</string>
+    <string name="create">Create</string>
     <string name="to">to</string>
     <string name="uncorrect_place">Invalid location</string>
     <string name="update">" - updated."</string>
