--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -67,4 +67,8 @@
     <string name="widget_desc_4">3. Центральна зона по можливості оновлює дані.</string>
     <string name="wind_speed">Вітер</string>
     <string name="yes">Так</string>
+    <string name="fluctuations_in_atmospheric_pressure_headaches_are_possible">- Коливання атмосферного тиску. (Можливі головні болі)</string>
+    <string name="surface_icing_possible">- Можлива ожеледиця</string>
+    <string name="uncomfortable_rainfall">- Некомфортний рівень опадів</string>
+    <string name="uncomfortable_wind_speed">- Некомфортна швидкість вітру</string>
 </resources>
