add parnter to contacts activity

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -71,4 +71,5 @@
     <string name="surface_icing_possible">- Surface icing possible</string>
     <string name="uncomfortable_rainfall">- Uncomfortable rainfall</string>
     <string name="uncomfortable_wind_speed">- Uncomfortable wind speed</string>
+    <string name="our_partner">Our partner</string>
 </resources>
