--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -71,4 +71,5 @@
     <string name="surface_icing_possible">- Можлива ожеледиця</string>
     <string name="uncomfortable_rainfall">- Некомфортний рівень опадів</string>
     <string name="uncomfortable_wind_speed">- Некомфортна швидкість вітру</string>
+    <string name="our_partner">Партнер</string>
 </resources>
